--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -76,3 +76,4 @@ body{
 @import "partials/pages/news";
 @import "partials/pages/about";
 @import "partials/pages/blog";
+@import "partials/pages/blogpost";
