--- a/assets/scss/partials/_pricing.scss
+++ b/assets/scss/partials/_pricing.scss
@@ -53,7 +53,7 @@
 							}
 							button {
 								@include button;
-								position: relative;
+								position: absolute;
 								right:65px;
 								bottom: 37px;
 							}
