--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -77,3 +77,4 @@ body{
 @import "partials/pages/about";
 @import "partials/pages/blog";
 @import "partials/pages/blogpost";
+@import "partials/pages/index2";
